--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -35,7 +35,7 @@
   transition: background .5s ease-in-out;
 }
 
-.timeline ul li div {
+.timeline ul li dl {
   position: relative;
   bottom: 0;
   width: 400px;
@@ -44,7 +44,7 @@
   color: $pink;
 }
 
-.timeline ul li div::before {
+.timeline ul li dl::before {
   content: '';
   position: absolute;
   bottom: 7px;
@@ -57,51 +57,51 @@
   background: #F45B69;
 }
 
-.timeline ul li div {
+.timeline ul li dl {
   visibility: hidden;
   opacity: 0;
   transition: all .5s ease-in-out;
 }
 
-.timeline ul li:nth-child(odd) div {
+.timeline ul li:nth-child(odd) dl {
   transform: translate3d(200px,0,0);
 }
 
-.timeline ul li:nth-child(even) div {
+.timeline ul li:nth-child(even) dl {
   transform: translate3d(-200px,0,0);
 }
 
-.timeline ul li.in-view div {
+.timeline ul li.in-view dl {
   transform: none;
   visibility: visible;
   opacity: 1;
 }
 
-.timeline ul li:nth-child(odd) div {
+.timeline ul li:nth-child(odd) dl {
   left: 45px;
 }
 
-.timeline ul li:nth-child(odd) div::before {
+.timeline ul li:nth-child(odd) dl::before {
   left: -15px;
   border-width: 8px 16px 8px 0;
   border-color: transparent #F45B69 transparent transparent;
 }
 
-.timeline ul li:nth-child(even) div {
+.timeline ul li:nth-child(even) dl {
   left: -439px;
 }
 
-.timeline ul li:nth-child(even) div::before {
+.timeline ul li:nth-child(even) dl::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
   border-color: transparent transparent transparent #F45B69;
 }
 
 @media screen and (max-width: 900px) {
-  .timeline ul li div {
+  .timeline ul li dl {
     width: 250px;
   }
-  .timeline ul li:nth-child(even) div {
+  .timeline ul li:nth-child(even) dl {
     left: -289px; /*250+45-6*/
   }
 }
@@ -111,15 +111,15 @@
     margin-left: 20px;
   }
 
-  .timeline ul li div {
+  .timeline ul li dl {
     width: calc(100vw - 91px);
   }
 
-  .timeline ul li:nth-child(even) div {
+  .timeline ul li:nth-child(even) dl {
     left: 45px;
   }
 
-  .timeline ul li:nth-child(even) div::before {
+  .timeline ul li:nth-child(even) dl::before {
     left: -15px;
     border-width: 8px 16px 8px 0;
     border-color: transparent #F45B69 transparent transparent;
