Tidy up more content

--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -10,6 +10,7 @@
         <dd><%= link_to "#{(a["name"]).upcase}", "#{a["url"]}"%></dd>
         <dt>Accomodation Address</dt>
         <dd><%= a["address"] %></dd>
+        <dt>Accomodation Contact Number</dt>
         <dd><%= a["phone_number"] %></dd>
       </dl>
     <% end %>
