--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -22,3 +22,10 @@
 #dropdown-title {
   color: $white;
 }
+
+@media (max-width: 767px) {
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: $white;
+    font-size: 15px;
+  }
+}
