--- a/app/views/pages/_main_people.html.erb
+++ b/app/views/pages/_main_people.html.erb
@@ -1,4 +1,4 @@
-<div class="container main-people-page">
+<div class="main-people-page container">
   <h2>Bride, Groom and Parents</h2>
   <div id="owl-demo" class="owl-carousel">
     <% @main_people.each do |d| %>
