--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -106,9 +106,10 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .timeline ul li {
     margin-left: 20px;
+    max-width: 100px;
   }
 
   .timeline ul li dl {
