--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="no-js">
   <head>
-    <title>Iain and TJ</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <title><% if content_for?(:page_title) %><%= yield :page_title %> - <% end %>Iain and TJ</title>
     <%= favicon_link_tag "heart.ico" %>
-    <%= stylesheet_link_tag    "application", media: "all" %>
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
   <body class="body-style">
     <%= render "shared/navbar" %>
-    <div class="row">
-      <%= render "shared/flash_messages", flash: flash %>
-    </div>
-    <div class="container">
-      <%= yield %>
+    <%= render "shared/flash_messages", flash: flash %>
+    <div class="banner">
+      <% if content_for?(:page_content) %><%= yield :page_content %><% else %><%= yield %><% end %>
     </div>
   </body>
   <script>
