--- a/app/views/pages/_info.html.erb
+++ b/app/views/pages/_info.html.erb
@@ -1,22 +1,27 @@
-<div class="container info-page">
+<%-
+  content_for :page_title, 'Info'
+-%>
+<div class="info-page">
   <% if @info.nil? %>
     <% @info = JSON.parse((File.read("#{Rails.root}/public/json/info.json"))) %>
   <% else %>
     <h2>Info</h2>
   <% end %>
-  <% @info.each do |d| %>
-    <dl class="columns small-5">
-      <dt class="hidden-label">Event Name</dt>
-      <dd><h4><%= d["name"].upcase %></h4></dd>
-      <dt>TIME</dt>
-      <dd class="info-time"><%= d["time"] %></dd>
-      <dt>LOCATION</dt>
-      <dd><%= link_to "#{d["location"]}", d["url"] %></dd>
-      <dt class="hidden-label">Address Lines</dt>
-      <dd><%= d["address_line_1"]%></dd>
-      <dd><%= d["address_line_2"]%></dd>
-      <dd><%= d["address_line_3"]%></dd>
-      <dd><%= d["address_line_4"]%></dd>
-    </dl>
-  <% end %>
+  <div class="row">
+    <% @info.each do |d| %>
+      <dl class="col-md-6">
+        <dt class="hidden-label">Event Name</dt>
+        <dd><p><%= d["name"].upcase %></p></dd>
+        <dt>TIME</dt>
+        <dd class="info-time"><%= d["time"] %></dd>
+        <dt>LOCATION</dt>
+        <dd><%= link_to "#{d["location"]}", d["url"] %></dd>
+        <dt class="hidden-label">Address Lines</dt>
+        <dd><%= d["address_line_1"]%></dd>
+        <dd><%= d["address_line_2"]%></dd>
+        <dd><%= d["address_line_3"]%></dd>
+        <dd><%= d["address_line_4"]%></dd>
+      </dl>
+    <% end %>
+  </div>
 </div>
