--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,14 +1,20 @@
-<div class="container">
-  <% @message = Message.new %>
-  <h2>Contact Us</h2>
-  <p>Feel free to get in touch with us below if you have any questions or something to share</p>
-  <%= bootstrap_form_for(@message, url: messages_path, layout: :horizontal)  do |f| %>
-    <%= f.hidden_field :message_subject, value: "QUESTION ABOUT THE WEDDING"%>
-    <%= f.text_area :full_name, label: "Your Full Name" %>
-    <%= f.text_area :email, label: "Your Email" %>
-    <%= f.text_area :content, label: "Message", rows: "10" %>
-    <%= button_tag(type: "submit", class: "hollow button", id: "send-message-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
-      Send
+<%-
+  content_for :page_title, 'Contact Us'
+-%>
+
+<% content_for :page_content do %>
+  <div class="container"%>
+    <% @message = Message.new %>
+    <h2>Contact Us</h2>
+    <p>Feel free to get in touch with us below if you have any questions or something to share</p>
+    <%= bootstrap_form_for(@message, url: messages_path, layout: :horizontal)  do |f| %>
+      <%= f.hidden_field :message_subject, value: "QUESTION ABOUT THE WEDDING"%>
+      <%= f.text_area :full_name, label: "Your Full Name" %>
+      <%= f.text_area :email, label: "Your Email" %>
+      <%= f.text_area :content, label: "Message", rows: "10" %>
+      <%= button_tag(type: "submit", class: "hollow button", id: "send-message-link", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i> Sending..."}) do %>
+        Send
+      <% end %>
     <% end %>
-  <% end %>
-</div>
+  </div>
+<% end %>
