--- a/app/views/pages/_info.html.erb
+++ b/app/views/pages/_info.html.erb
@@ -1,5 +1,5 @@
 <%-
-  content_for :page_title, 'Info'
+  content_for :page_title, 'The Wedding'
 -%>
 <div class="info-page">
   <% if @info.nil? %>
