Tidy up fonts and get rid of extra unnecessary content

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -27,5 +27,6 @@
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: $white;
     font-size: 15px;
+    text-align: center;
   }
 }
