--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,8 +55,25 @@ body {
   margin-right: 50px;
 }
 
-@media all and (max-width: 700px) and (min-width: 320px) {
-  margin-left: 30px;
-  margin-right: 50px;
-  font-size: 50%;
+@media all and (max-width: 700px) {
+  .banner {
+    margin-left: 2px;
+    margin-right: 10px;
+  }
+.timeline ul {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+.timeline ul li {
+  margin-left: 0px;
+}
+.timeline ul li:nth-child(odd) dl {
+  left: 0px;
+}
+.timeline ul li:nth-child(even) dl {
+  left: 0px;
+}
+margin-left: 30px;
+margin-right: 50px;
+font-size: 50%;
 }
