--- a/app/views/pages/accomodation.html.erb
+++ b/app/views/pages/accomodation.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, 'Accomodation' %>
+<% content_for :page_title, "Accomodation" %>
 
 <% content_for :page_content do %>
   <div class="accomodation-page container">
