--- a/app/views/pages/gift_registry.html.erb
+++ b/app/views/pages/gift_registry.html.erb
@@ -1,5 +1,5 @@
 <%-
-  content_for :page_title, 'Gift Registry'
+  content_for :page_title, "Gift Registry"
 -%>
 <% content_for :page_content do %>
   <div class="gift-registry-page container">
