--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -1,5 +1,5 @@
 <%-
-  content_for :page_title, 'Our Story'
+  content_for :page_title, "Our Story"
 -%>
 <% content_for :page_content do %>
   <div class="our-story-page container">
