--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,5 +1,5 @@
 <%-
-  content_for :page_title, 'RSVP'
+  content_for :page_title, "RSVP"
 -%>
 <% content_for :page_content do %>
   <div class="new-rsvp-page container">
