--- a/app/views/pages/people.html.erb
+++ b/app/views/pages/people.html.erb
@@ -1,5 +1,5 @@
 <%-
-  content_for :page_title, 'People'
+  content_for :page_title, "People"
 -%>
 <% content_for :page_content do %>
   <div class="container">
