Add individually to RSVP page

--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -4,7 +4,7 @@
 <% content_for :page_content do %>
   <div class="new-rsvp-page container">
     <h2>Rsvp</h2>
-    <p>Please submit a RSVP for each guest in your family/group by Friday 20 January 2017 for catering purposes</p>
+    <p>Please submit a RSVP for each guest individually from your family/group by Friday 20 January 2017 for catering purposes</p>
     <%= render "form" %>
   </div>
 <% end %>
